Fix scrolling issues with Magnific popup on mobile.
Scrolling wasn't smooth, and also wasn't letting user
scroll to bottom of content. Not a complete fix,
still some issues, but an improvement. Used the
following: https://github.com/dimsemenov/Magnific-Popup/issues/12

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3075,10 +3075,24 @@ a {
 }
 
 .popup-scroll {
-  max-height: 600px;
+  max-height: 500px;
   padding:0 1em 0 0; 
   overflow-y: scroll;
 }  
+
+.mfp-wrap {
+  -webkit-overflow-scrolling: touch;
+  -webkit-transform: translateZ(0);
+}
+
+html.mfp-helper {
+  height: 100%;
+
+  body {
+    overflow: hidden;
+    height: 100%;
+  }
+}
 
 /* Magnific Animations */
 
